deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: acas-pro
  labels:
    app.kubernetes.io/name: acas-pro
    app.kubernetes.io/version: "1.0.0"
