deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acas-pro-api
  namespace: acas-pro
  labels:
    app: acas-pro-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 9090
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app: acas-pro-api
---
apiVersion: v1
kind: Service
metadata:
  name: acas-pro-api-headless
  namespace: acas-pro
  labels:
    app: acas-pro-api
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8000
      name: http
  selector:
    app: acas-pro-api
